charts/camunda-platform-8.2/test/unit/web-modeler/golden/deployment-websockets.golden.yaml
---
# Source: camunda-platform/templates/web-modeler/deployment-websockets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-test-web-modeler-websockets
  labels:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.2.15"
    app.kubernetes.io/component: websockets
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: web-modeler
      app.kubernetes.io/instance: camunda-platform-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: websockets
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: web-modeler
        app.kubernetes.io/instance: camunda-platform-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: "8.2.15"
        app.kubernetes.io/component: websockets
    spec:
      imagePullSecrets:
        []
      containers:
      - name: web-modeler-websockets
        image: "registry.camunda.cloud/web-modeler-ee/modeler-websockets:8.2.15"
        imagePullPolicy: IfNotPresent
        env:
          - name: APP_NAME
            value: "Web Modeler WebSockets"
          - name: PUSHER_APP_ID
            valueFrom:
              configMapKeyRef:
                name: camunda-platform-test-web-modeler
                key: pusher-app-id
          - name: PUSHER_APP_KEY
            valueFrom:
              configMapKeyRef:
                name: camunda-platform-test-web-modeler
                key: pusher-app-key
          - name: PUSHER_APP_SECRET
            valueFrom:
              secretKeyRef:
                name: camunda-platform-test-web-modeler
                key: pusher-app-secret
          - name: PUSHER_APP_CLUSTER
            value: "web-modeler"
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        ports:
        - containerPort: 8060
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /up
            scheme: HTTP
            port: http
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 1
