charts/camunda-platform-8.2/test/unit/web-modeler/golden/service-webapp.golden.yaml
---
# Source: camunda-platform/templates/web-modeler/service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-platform-test-web-modeler-webapp
  labels:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.2.17"
    app.kubernetes.io/component: webapp
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 8070
    protocol: TCP
  - port: 8071
    name: http-management
    targetPort: 8071
    protocol: TCP
  selector:
    app: camunda-platform
    app.kubernetes.io/name: web-modeler
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: webapp
